# InsightForge

./: .env.example  .gitignore  .pre-commit-config.yaml  PROGRESS.md  README.md  check_crewai.py  clear_chroma.py  commit_msg.txt  debug_e2e.py  debug_embedding.py  debug_knowledge_test.py  debug_tool_test.py  pyproject.toml  run_test.bat  run_web.bat  test_chart_generation.py  test_config.py  test_dashscope_embedding.py  test_debug.py  test_design_only.py  test_design_task.py  test_e2e.py  test_e2e_detailed.py  test_embedding.py  test_env.py  test_full_crew.py  test_image_generation.py  test_knowledge.py  test_knowledge_direct.py  test_knowledge_loading.py  test_log.txt  test_minimal_agent.py  test_models.py  test_multilang.py  test_multilang_config.py  test_onnx.py  test_performance.py  test_rag_integration.py  test_rag_retrieval.py  test_rag_ssl.py  (+4 more)
docs/: AGENT_OPTIMIZATION.md  COMPETITIVE_ANALYSIS.md  DESIGN_VS_IMPL.md  DEV_PLAN.md  PRD.md  PROMPT_DESIGN.md  SECURITY.md  TECH_DESIGN.md  TEST_PLAN.md
e2e_test/presentations/: OpenAI_Sora_Technology_Impact.pptx  ppt_structure_20260318_011952_OpenAI_Sora_Technology_Impact.json  ppt_structure_fixed.json  test_business_gray.pptx  test_minimal_white.pptx  test_nature_green.pptx  test_tech_blue.pptx
e2e_test/reports/: report_20260318_011952_OpenAI_Sora_Technology_Impact.md
knowledge/academic_analysis/: PEST分析.md  SWOT分析.md  数据可视化.md  波特五力分析.md
knowledge/industry/: 医疗行业知识库.md  科技行业知识库.md  金融行业知识库.md
knowledge/ppt_skills/: PPT设计原则.md  图表设计.md  配色指南.md
knowledge/report_templates/: 技术报告模板.md  技术评估报告模板.md  竞品分析报告模板.md  行业研究报告模板.md
reference_reports/: QUALITY_BENCHMARK.md  QUALITY_EVALUATION.md  REPORT_TEMPLATE.md  gpt4_report_analysis.md
src/tech_report_agent/: __init__.py  crew.py  main.py  ppt_generator.py  project_manager.py  web_ui.py
test_output/: ppt_structure_20260319_000409_AI_Agent_技术趋势_2024.json  presentation_20260319_000409_AI_Agent_技术趋势_2024.pptx  report_20260318_222748_AI_Agent_技术趋势_2024.md  report_20260319_000409_AI_Agent_技术趋势_2024.md  test_swot.pptx  test_tech_curve.pptx  test_visual_business_gray.pptx  test_visual_coral_sunset.pptx  test_visual_minimal_white.pptx  test_visual_nature_green.pptx  test_visual_ocean_depth.pptx  test_visual_tech_blue.pptx
tests/: test_e2e.py  test_integration.py  test_performance.py  test_unit.py
(+30 files in other folders)
